# api6

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  kickoff.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  poetry.toml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  main.py  project.json  pyproject.toml  pytest.ini
apps/api/src/: dev.py  server.py
apps/api/src/api/: server.py
apps/api/src/api/middleware/: auth.py
apps/api/src/api/models/: dashboard_model.py  yield_model.py  yield_predict_model.py
apps/api/src/api/routes/: __init__.py  _index.py  dashboard_route.py  dashboard_routes.py  pagination.py  terms_routes.py  yield_predict_router.py  yield_predict_routes.py  yield_routes.py
apps/api/src/api/service/: dashboard_service.py  terms_service.py  yield_predict_service.py
apps/api/src/models/: dashboard_model.py  yield_model.py
apps/api/src/routes/: dashboard_route.py
apps/api/src/service/: dashboard_service.py
apps/api/tests/: test_yield_model.py
apps/auth/: Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh  hydra.docker-compose.yaml  hydra_bootstrap.Dockerfile  hydra_bootstrap.lua  project.json
apps/auth/src/: database.rs  jwt.rs  main.rs  swagger.rs  templates.rs  types.rs
apps/auth/src/entities/: entity_key.rs  entity_type.rs  external_client.rs  keys.rs  mod.rs  permission.rs  revoked_token.rs  role.rs  role_permission.rs  user.rs
apps/auth/src/infra/: config.rs  db.rs  mod.rs  server.rs  types.rs
apps/auth/src/models/: auth.rs  entity_type.rs  external_client.rs  jwt.rs  mod.rs  pagination.rs  user.rs
apps/auth/src/routes/: auth.rs  consent.rs  external_client.rs  external_client_auth.rs  mod.rs  portability.rs  user.rs
apps/auth/src/routes/auth/: auth.rs  mod.rs  types.rs
apps/auth/src/routes/common/: error.rs
apps/auth/src/routes/consent/: consent.rs  mod.rs  types.rs
apps/auth/src/service/: fernet.rs  jwt.rs  mod.rs
apps/auth/src/services/: hydra.rs  mod.rs  types.rs
apps/auth/src/templates/: engine.rs
apps/auth/src/templates/portability/: authorization_button.html  authorization_form.html
apps/auth/templates/portability/: authorization_button.html  authorization_form.html
apps/db/: README.md  docker-compose.yml  main.py  mongo.py  mongo_db.py  mongo_initialize.py  mongo_seeds.py  poetry.toml  postgres_initialize.py  project.json  pyproject.toml
apps/db/seeds/: mongo_seeds.py  postgres_seeds.py
apps/db/src/: mongo.py  postgres.py
apps/db/src/db/: daily_backup.py  keys.py  mongo.py  pg_keys.py  postgres.py  restore_backup.py
apps/db/tests/integration/: test_mongo.py
apps/notif/: README.md  config.yaml  main.py  project.json  pyproject.toml
apps/portability_example/: jest.config.ts  project.json  tsconfig.json  vite.config.ts
apps/portability_example/src/: app.tsx  storage.ts  styles.css
apps/portability_example/src/schemas/: auth.ts  user.ts
apps/portability_example/src/service/: auth.ts  portability.ts  service.ts
apps/portability_example/tests/: example.test.ts
apps/web/: index.html  jest.config.ts  jest.setup.js  project.json  vite.config.ts
apps/web/public/: brazil-states.geojson
apps/web/src/: main.tsx  styles.css
apps/web/src/app/: app.spec.tsx  app.tsx
apps/web/src/components/: BrazilMapChart.tsx  FormsComponent.tsx  GenericChart.tsx  Loading.tsx  LogoutButton.tsx  NavBar.tsx  Pagination.tsx  TableComponent.tsx
apps/web/src/components/styles/: FormsComponent.css  Pagination.css  TableComponent.css
apps/web/src/pages/: Dashboard.tsx  EventsRegister.tsx  Login.tsx  PersonalData.tsx  ProjectionCostumPage.tsx  ProjectionCustomPage.tsx  ProjectionPage.tsx  ReportPage.tsx  Terms.tsx  TermsModal.tsx  UserManagementPage.tsx  YieldRegister.tsx
apps/web/src/pages/styles/: EventsRegister.css
apps/web/src/schemas/: DashboardSchema.ts  FormsSchema.ts  ProjectionCostumSchema.ts  ProjectionSchema.ts  TermsSchema.ts  UserSchema.ts  auth.ts  chartSchema.ts  pagination.ts  yield.ts
apps/web/src/service/: AuthService.ts  DashboardService.ts  ProjectionCostumService.ts  ProjectionService.ts  TermsService.ts  UserService.ts  YieldService.ts  service.ts
apps/web/src/store/: UserStorage.ts  storage.ts
apps/web/tests/: UserService.test.ts  UserStorage.test.ts
