[tool.poetry]
name = "@api6/source"
version = "1.0.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = ">=3.1.0,<4.0.0"
flask-cors = ">=5.0.1,<6.0.0"
dotenv = "^0.9.9"
pymongo = ">=4.11.1,<5.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
pydantic = "^2.10.6"
cryptography = "^44.0.2"
faker = "^37.1.0"
bcrypt = "^4.3.0"

[tool.poetry.dependencies.api]
path = "apps/api"
develop = true

[tool.poetry.dependencies.db]
path = "apps/db"
develop = true

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
flake8 = "6.0.0"
pytest = "8.3.5"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"
black = "^25.1.0"
mongomock = "^4.3.0"
colorama = "^0.4.6"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies.testcontainers]
extras = ["mongodb", "postgres"]
version = "^4.9.2"

[tool.nx]
autoActivate = true
