[tool.poetry]
name = "api"
version = "0.1.0"
readme = "README.md"
package-mode = false

[[tool.poetry.packages]]
include = "api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
dotenv = "*"
flask = "*"
flask-cors = "*"
pymongo = "*"
psycopg2 = "*"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
flake8 = "*"
black = "*"
pytest = "*"
pytest-sugar = "*"
pytest-cov = "*"
pytest-html = "*"

[tool.nx]
autoActivate = true
