[tool.coverage.run]
branch = true
source = ["api"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
show_missing = true

[tool.poetry]
name = "api"
version = "1.0.0"
license = "Proprietary"
readme = "README.md"
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
python = "*"
dotenv = "*"
flask = "*"
flask-cors = "*"
pymongo = "*"
psycopg2 = "*"
pydantic = "*"

db = { path = "../db/" }

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
flake8 = "*"
pytest = "*"
pytest-sugar = "*"
pytest-cov = "*"
pytest-html = "*"
mongomock = "*"

[tool.poetry-monorepo.deps]
