[package]
name = "auth"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tokio-postgres = "0.7.13"
deadpool-postgres = "0.14.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
